[package]
name = "q-periapt-continuity-model"
description = "Non-normative executable lifecycle model for Q-Periapt Continuity research"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
readme = "README.md"

[lints]
workspace = true

[features]
default = []

[dependencies]
